eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/II_Kolok_zd13.build.log
22:21:21 **** Incremental Build of configuration Debug for project II_Kolok_zd13 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main13.o "..\\main13.c" 
..\main13.c: In function 'funkcija':
..\main13.c:13:19: warning: character constant too long for its type
  case '0': return 'nula-';
                   ^~~~~~~
..\main13.c:13:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c:14:19: warning: character constant too long for its type
  case '1': return 'eden-';
                   ^~~~~~~
..\main13.c:14:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c:15:19: warning: multi-character character constant [-Wmultichar]
  case '2': return 'dva-';
                   ^~~~~~
..\main13.c:15:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c:16:19: warning: multi-character character constant [-Wmultichar]
  case '3': return 'tri-';
                   ^~~~~~
..\main13.c:16:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c:17:19: warning: character constant too long for its type
  case '4': return 'cetiri';
                   ^~~~~~~~
..\main13.c:17:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c:18:19: warning: multi-character character constant [-Wmultichar]
  case '5': return 'pet-';
                   ^~~~~~
..\main13.c:18:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c:19:19: warning: character constant too long for its type
  case '6': return 'sest-';
                   ^~~~~~~
..\main13.c:19:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c:20:19: warning: character constant too long for its type
  case '7': return 'sedum-';
                   ^~~~~~~~
..\main13.c:20:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c:21:19: warning: character constant too long for its type
  case '8': return 'osum-';
                   ^~~~~~~
..\main13.c:21:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c:22:19: warning: multi-character character constant [-Wmultichar]
  case '9': return 'pet-';
                   ^~~~~~
..\main13.c:22:19: warning: overflow in implicit constant conversion [-Woverflow]
..\main13.c: In function 'main':
..\main13.c:33:5: error: redeclaration of 'i' with no linkage
 int i,dol;
     ^
..\main13.c:31:5: note: previous declaration of 'i' was here
 int i;
     ^
..\main13.c:54:20: warning: format '%s' expects argument of type 'char *', but argument 3 has type 'int' [-Wformat=]
   fprintf(vlezna,"%s",funkcija(niza[i]));
                    ^
..\main13.c:65:1: error: expected declaration or statement at end of input
 }
 ^
..\main13.c: In function 'funkcija':
..\main13.c:25:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^

22:21:21 Build Failed. 2 errors, 22 warnings. (took 91ms)

